tests/baselines/reference/generatorTypeCheck20.errors.txt
generatorTypeCheck20.ts(5,13): error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.


==== generatorTypeCheck20.ts (1 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g(): IterableIterator<Foo> {
        yield;
        yield * [new Baz];
                ~~~~~~~~~
!!! error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.
!!! related TS2728 generatorTypeCheck20.ts:1:13: 'x' is declared here.
    }